---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT coalesce(json_agg(row_to_json("root")), '[]') AS "rows" FROM (SELECT "Albums"."Albums" AS "Albums" FROM "public"."Artist" AS "Artist" LEFT OUTER JOIN LATERAL (SELECT coalesce(json_agg(row_to_json("Albums")), '[]') AS "Albums" FROM (SELECT "Tracks"."Tracks" AS "Tracks" FROM "public"."Album" AS "Album" LEFT OUTER JOIN LATERAL (SELECT coalesce(json_agg(row_to_json("Tracks")), '[]') AS "Tracks" FROM (SELECT "Track"."Name" AS "name" FROM "public"."Track" AS "Track" WHERE (true AND ("Album"."AlbumId" = "Track"."AlbumId"))) AS "Tracks") AS "Tracks" ON ('true')  WHERE (true AND ("Artist"."ArtistId" = "Album"."ArtistId"))) AS "Albums") AS "Albums" ON ('true') ) AS "root"

[]
